--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Try-Align Clone</title>
+  <title>Try-Align</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Try-Align Clone</h1>
+    <h1>Welcome to Try-Align</h1>
   </header>
   <section id="signup">
     <h2>Sign Up</h2>
