--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -3982,18 +3982,15 @@
                         data-wp-watch="callbacks.focusFirstElement" id="modal-1-content">
                         <ul
                           class="wp-block-navigation__container is-responsive items-justified-right wp-block-navigation">
-                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content"
-                              href="https://r-ushakov.github.io/try_align/"><span
-                                class="wp-block-navigation-item__label">Home</span></a></li>
-                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content"
-                              href="https://try-align.net/subscriptions/"><span
-                                class="wp-block-navigation-item__label">Pricing Plans</span></a></li>
                           <li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="https://try-align.net/contact-us/"
-                              aria-current="page"><span class="wp-block-navigation-item__label">Contact Us</span></a>
-                          </li>
+                              class="wp-block-navigation-item__content" href="https://r-ushakov.github.io/try_align/"
+                              aria-current="page"><span class="wp-block-navigation-item__label">Home</span></a></li>
+                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
+                              class="wp-block-navigation-item__content" href="./pricing/index.html"><span
+                                class="wp-block-navigation-item__label">Pricing Plans</span></a></li>
+                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
+                              class="wp-block-navigation-item__content" href="./contact-us/index.html"><span
+                                class="wp-block-navigation-item__label">Contact Us</span></a></li>
                         </ul>
                       </div>
                     </div>
