--- a/pricing/index.html
+++ b/pricing/index.html
@@ -4303,25 +4303,14 @@
                         data-wp-watch="callbacks.focusFirstElement" id="modal-1-content">
                         <ul
                           class="wp-block-navigation__container is-responsive items-justified-right wp-block-navigation">
-                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="https://try-align.net/"><span
-                                class="wp-block-navigation-item__label">Home</span></a></li>
-                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="https://try-align.net/upload/"><span
-                                class="wp-block-navigation-item__label">Upload</span></a></li>
-                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content"
-                              href="https://try-align.net/dashboard-in-progress/"><span
-                                class="wp-block-navigation-item__label">Dashboard (In Progress)</span></a></li>
-                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="https://try-align.net/partners/"><span
-                                class="wp-block-navigation-item__label">Partners</span></a></li>
                           <li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="https://try-align.net/subscriptions/"
-                              aria-current="page"><span class="wp-block-navigation-item__label">Pricing Plans</span></a>
-                          </li>
+                              class="wp-block-navigation-item__content" href="https://r-ushakov.github.io/try_align/"
+                              aria-current="page"><span class="wp-block-navigation-item__label">Home</span></a></li>
                           <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="https://try-align.net/contact-us/"><span
+                              class="wp-block-navigation-item__content" href="./pricing/index.html"><span
+                                class="wp-block-navigation-item__label">Pricing Plans</span></a></li>
+                          <li class=" wp-block-navigation-item wp-block-navigation-link"><a
+                              class="wp-block-navigation-item__content" href="./contact-us/index.html"><span
                                 class="wp-block-navigation-item__label">Contact Us</span></a></li>
                         </ul>
                       </div>
