--- a/index.html
+++ b/index.html
@@ -4013,10 +4013,10 @@
                               class="wp-block-navigation-item__content" href="https://r-ushakov.github.io/try_align/"
                               aria-current="page"><span class="wp-block-navigation-item__label">Home</span></a></li>
                           <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="./pricing/index.html"><span
+                              class="wp-block-navigation-item__content" href="pricing.html"><span
                                 class="wp-block-navigation-item__label">Pricing Plans</span></a></li>
                           <li class=" wp-block-navigation-item wp-block-navigation-link"><a
-                              class="wp-block-navigation-item__content" href="./contact-us/index.html"><span
+                              class="wp-block-navigation-item__content" href="contact-us.html"><span
                                 class="wp-block-navigation-item__label">Contact Us</span></a></li>
                         </ul>
                       </div>
